# routers/router.go
@@ -1,20 +1,16 @@
 package routers
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 
-	_ "github.com/EDDYCJY/go-gin-example/docs"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 
-	"github.com/EDDYCJY/go-gin-example/middleware/jwt"
-	"github.com/EDDYCJY/go-gin-example/pkg/export"
-	"github.com/EDDYCJY/go-gin-example/pkg/qrcode"
-	"github.com/EDDYCJY/go-gin-example/pkg/upload"
-	"github.com/EDDYCJY/go-gin-example/routers/api"
-	"github.com/EDDYCJY/go-gin-example/routers/api/v1"
+	_ "github.com/sahlinet/go-tumbo/docs"
+
+	"github.com/sahlinet/go-tumbo/middleware/jwt"
+	"github.com/sahlinet/go-tumbo/routers/api"
+	"github.com/sahlinet/go-tumbo/routers/api/v1"
 )
 
 // InitRouter initialize routing information
@@ -23,42 +19,23 @@ func InitRouter() *gin.Engine {
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
 
-	r.StaticFS("/export", http.Dir(export.GetExcelFullPath()))
-	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
-	r.StaticFS("/qrcode", http.Dir(qrcode.GetQrCodeFullPath()))
-
 	r.POST("/auth", api.GetAuth)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	r.POST("/upload", api.UploadImage)
 
 	apiv1 := r.Group("/api/v1")
 	apiv1.Use(jwt.JWT())
 	{
 		//获取标签列表
-		apiv1.GET("/tags", v1.GetTags)
-		//新建标签
-		apiv1.POST("/tags", v1.AddTag)
-		//更新指定标签
-		apiv1.PUT("/tags/:id", v1.EditTag)
-		//删除指定标签
-		apiv1.DELETE("/tags/:id", v1.DeleteTag)
-		//导出标签
-		r.POST("/tags/export", v1.ExportTag)
-		//导入标签
-		r.POST("/tags/import", v1.ImportTag)
-
 		//获取文章列表
-		apiv1.GET("/articles", v1.GetArticles)
+		apiv1.GET("/projects", v1.Getprojects)
 		//获取指定文章
-		apiv1.GET("/articles/:id", v1.GetArticle)
+		apiv1.GET("/projects/:id", v1.GetProject)
 		//新建文章
-		apiv1.POST("/articles", v1.AddArticle)
+		apiv1.POST("/projects", v1.AddArticle)
 		//更新指定文章
-		apiv1.PUT("/articles/:id", v1.EditArticle)
+		apiv1.PUT("/projects/:id", v1.EditArticle)
 		//删除指定文章
-		apiv1.DELETE("/articles/:id", v1.DeleteArticle)
-		//生成文章海报
-		apiv1.POST("/articles/poster/generate", v1.GenerateArticlePoster)
+		apiv1.DELETE("/projects/:id", v1.DeleteArticle)
 	}
 
 	return r
